--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.6.0",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "leaflet": "^1.9.3",
     "next": "13.2.4",
+    "next-auth": "^4.24.5",
     "nextjs": "^0.0.3",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -33,10 +37,12 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.3",
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.2.7"
   }
 }
