--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://vanvu572:345712@cluster0.41n8n.mongodb.net/roamhome"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=aff7d287841a529e5d15
+GITHUB_SECRET=858936428dc9f9191cdd5526c7d80dd00eeefa58
+
+GOOGLE_CLIENT_ID=287279429598-o9hpejd8g99aqkmo2mi8n529thh8sfdr.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
